cognitive distortion fixes

--- a/css/cm_decoration.css
+++ b/css/cm_decoration.css
@@ -7,3 +7,8 @@
 .autosuggest-font { color: #BEBDBE; }
 .replacement-font { color: #b2d9c3; }
 .cognitive-distortion {background-color: #f8e4e4; }
+.BeingRight { background-color: #ff6666; }
+.Blaming { background-color: #ff66ff; }
+.Catastrophizing { background-color: #6699ff; }
+.MindReading { background-color: #00ffcc; }
+.Splitting { background-color: #ffff66; }
